# siyisdk

./: .clang-format  Api.cpp  Api.h  CMakeLists.txt  Command.h  Connection.cpp  Crc.cpp  Crc.h  Message.h  MessageParser.cpp  README.md
cmake/: git.cmake
example/: CMakeLists.txt  SiyiCli.cpp
include/: CameraApi.h  Message.h  MessageBuilder.h  Siyi.h
src/: Api.h  CameraApi.cpp  Command.h  CommunicationWorker.cpp  CommunicationWorker.h  Connection.cpp  Connection.h  Crc.cpp  Crc.h  Message.h  MessageBuilder.cpp  MessageBuilder.h  MessageParser.cpp  MessageParser.h
